# hermes-context-system

./: .gitignore  LICENSE  README.md  STATUS.md  TODO.md  context_manager.py  hermes_context.py  hermes_paths.py  integration.py  pyproject.toml  rag_integration.py  session_preloader.py  smart_preloader.py  vault_integration.py
.hermes/plans/: 2026-05-05_225413-weather-kelly-paper-trader.md
outputs/: publish-status.md  scheduled-review-report.md  ship-status.md
scripts/: validate_main_flow.sh
tests/: test_cli.py  test_context_manager.py  test_hermes_context.py  test_installed_entrypoints.py
